kubernetes-troubleshooting/network-policy/network-policy-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pod2
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: 
      - podSelector:
          matchLabels:
            app: pod1
  egress:
    - to: 
      - podSelector:
          matchLabels:
            app: pod1
